<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background"
        tools:context=".MovieDetailsActivity">

        <ImageView
            android:id="@+id/iv_movie_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/background_image_size"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/background_image_size"
            android:scaleType="fitXY"
            android:src="@drawable/ic_mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBackNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="56dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/back"
            android:textAppearance="@style/Text.BackNav"
            app:drawableStartCompat="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/guidelineBackNav" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/tv_pg_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="226dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/pg_info"
            android:textAppearance="@style/Text"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="254dp"
            android:gravity="center_vertical"
            android:text="@string/avengers_end_game"
            android:textAppearance="@style/Text.Header.Large"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:text="@string/genre"
            android:textAppearance="@style/GenresText"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <com.kva.aa_petproject.SvgRatingBar
            android:id="@+id/rb_review_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="13dp"
            android:numStars="5"
            android:progressDrawable="@drawable/rating_bar"
            android:rating="4.0"
            android:stepSize="0.01"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_genres" />

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:text="@string/reviews"
            android:textAppearance="@style/Text.Review"
            app:layout_constraintBottom_toBottomOf="@id/rb_review_rate"
            app:layout_constraintStart_toEndOf="@id/rb_review_rate"
            app:layout_constraintTop_toTopOf="@id/rb_review_rate" />

        <TextView
            android:id="@+id/tv_film_description_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_header_margin_top"
            android:text="@string/film_description_header"
            android:textAppearance="@style/Text.Header"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/rb_review_rate" />

        <TextView
            android:id="@+id/tv_film_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.75"
            android:lineSpacingExtra="4sp"
            android:text="@string/film_description"
            android:textAppearance="@style/Text.Large"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_film_description_header" />

        <TextView
            android:id="@+id/tv_cast_description_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_header_margin_top"
            android:text="@string/cast_header"
            android:textAppearance="@style/Text.Header"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_film_description" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_actor_poster_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/actor_image_margin_top"
            android:layout_marginEnd="@dimen/actor_image_margin_end"
            android:adjustViewBounds="true"
            android:src="@drawable/iron_man"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/iv_actor_poster_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_description_header"
            app:shapeAppearanceOverlay="@style/circleImageView"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_actor_name_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/actor_name_margin_top"
            android:text="@string/iron_man_name"
            android:textAppearance="@style/Text.Header"
            app:layout_constraintEnd_toEndOf="@id/iv_actor_poster_1"
            app:layout_constraintStart_toStartOf="@id/iv_actor_poster_1"
            app:layout_constraintTop_toBottomOf="@id/iv_actor_poster_1" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_actor_poster_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/actor_image_margin_top"
            android:layout_marginEnd="@dimen/actor_image_margin_end"
            android:adjustViewBounds="true"
            android:src="@drawable/cap"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/iv_actor_poster_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_actor_poster_1"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_description_header"
            app:shapeAppearanceOverlay="@style/circleImageView"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_actor_name_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/actor_name_margin_top"
            android:text="@string/cap_name"
            android:textAppearance="@style/Text.Header"
            app:layout_constraintEnd_toEndOf="@id/iv_actor_poster_2"
            app:layout_constraintStart_toStartOf="@id/iv_actor_poster_2"
            app:layout_constraintTop_toBottomOf="@id/iv_actor_poster_2" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_actor_poster_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/actor_image_margin_top"
            android:layout_marginEnd="@dimen/actor_image_margin_end"
            android:adjustViewBounds="true"
            android:src="@drawable/hulk"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/iv_actor_poster_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_actor_poster_2"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_description_header"
            app:shapeAppearanceOverlay="@style/circleImageView"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_actor_name_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/actor_name_margin_top"
            android:text="@string/hulk_name"
            android:textAppearance="@style/Text.Header"
            app:layout_constraintEnd_toEndOf="@id/iv_actor_poster_3"
            app:layout_constraintStart_toStartOf="@id/iv_actor_poster_3"
            app:layout_constraintTop_toBottomOf="@id/iv_actor_poster_3" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_actor_poster_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/actor_image_margin_top"
            android:adjustViewBounds="true"
            android:src="@drawable/tor"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_actor_poster_3"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_description_header"
            app:shapeAppearanceOverlay="@style/circleImageView"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_actor_name_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/actor_name_margin_top"
            android:text="@string/tor_name"
            android:textAppearance="@style/Text.Header"
            app:layout_constraintEnd_toEndOf="@id/iv_actor_poster_4"
            app:layout_constraintStart_toStartOf="@id/iv_actor_poster_4"
            app:layout_constraintTop_toBottomOf="@id/iv_actor_poster_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>